# Defi-IA-2020

./: .gitattributes  .gitignore  Informations_Defi.txt  Makefile  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: default.yaml
data/interim/: test.parquet  train.parquet
data/processed/: _struct.parquet  test_author_dyn.parquet  (+11 more)
docs/: challenge_brief.md  compute_strategy.md  eda_findings.md  guide.md  plan.md  preconisations.md
notebooks/: README.md
reports/: ablation_embeddings.json  baseline_mae.json  blend_final.json  blend_final3.json  blend_final_clean.json  blend_final_gpu.json  blend_final_hybrid.json  blend_two_stage.json  cf_buckets_fold0.json  cf_buckets_fold1.json  finetuning_ablation.json  ft_e5.json  ft_e5_buckets.json  ft_e5_cls.json  ft_e5_echec.json  gbm_clean_full.json  gbm_emb_e5_full.json  gbm_emb_modernbert.json  gbm_gbm_huber.json  gbm_gbm_mae.json  gbm_gbm_mae_authorenc.json  gbm_gbm_mae_log.json  gbm_gbm_tfidf.json  gbm_hybrid_full.json  gbm_two_stage.json  rapport.md  two_stage.json
scripts/: _catboost_test.py  bench_encode.py  bench_finetune.py  blend_two_stage.py  blend_two_stage_submit.py  eda_stream.py  encode_local.py  finetune.py  pipeline_final.sh  setup_openmp.sh  supervise_crossfit.sh  supervise_finetune.sh  supervise_ft_buckets.sh  supervise_ft_cls.sh  two_stage.py  two_stage_submit.py
tests/: test_metrics.py
(+37 files in other folders)
