[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defia"
version = "0.1.0"
description = "Défi IA 2020 revisité — prédiction des upvotes Reddit (MAE), text + network mining"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Dépendances runtime : voir requirements.txt (source de vérité pinnée).
dependencies = [
    "numpy>=1.26", "pandas>=2.1", "pyarrow>=15.0", "scipy>=1.11",
    "scikit-learn>=1.4", "lightgbm>=4.3", "catboost>=1.2",
    "networkx>=3.2", "nltk>=3.8", "pyyaml>=6.0", "tqdm>=4.66",
    "joblib>=1.3", "click>=8.1", "psutil>=5.9",
]

[project.optional-dependencies]
gpu = ["torch>=2.2", "transformers>=4.44", "sentence-transformers>=3.0", "accelerate>=0.33", "datasets>=2.20"]
dev = ["pytest>=8.0", "ruff>=0.5", "ipykernel>=6.29"]

[project.scripts]
defia = "defia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
